crates/entity-derive/tests/cases/fail/enum_derive.stderr
error: Unsupported shape `enum`. Expected struct with named fields.
 --> tests/cases/fail/enum_derive.rs:6:10
  |
6 | #[derive(Entity)]
  |          ^^^^^^
  |
  = note: this error originates in the derive macro `Entity` (in Nightly builds, run with -Z macro-backtrace for more info)
